# tree_test

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
dataset/drone_view_dataset/Tree-Top-View.v6i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/drone_view_dataset/Tree-Top-View.v6i.yolov11/train/: labels.cache
dataset/drone_view_dataset/Tree-Top-View.v6i.yolov11/valid/: labels.cache
training/: drone_view_model_train.ipynb
training/tree-detector/yolov11s-tree-detection/: args.yaml  results.csv
